# nlp-cource-2026

./: .gitignore  README.md  pyproject.toml
hw1/: hw1.ipynb
hw2/: hw2.ipynb
hw3/: hw3.ipynb
hw4/: hw4.ipynb
hw5/: hw5.ipynb
hw6/: hw6.ipynb
hw7/: bert_finetuning_colab_v3.py  hw7.ipynb
project/: __init__.py  compare_rumteb_runs.py  run_rumteb_llm_reranker.py  run_rumteb_reranker.py  run_rusbeir_llm_reranker.py  run_rusbeir_reranker.py
project/llm_reranker/: __init__.py  benchmark.py  cache.py  logging_utils.py  rusbeir.py  search_adapter.py  types.py  utils.py
project/llm_reranker/providers/: __init__.py  base.py  ollama.py  openrouter.py  vllm.py
project/llm_reranker/strategies/: __init__.py  base.py  listwise.py  pairwise.py  pointwise.py  prompt_templates.py
project/llm_reranker/strategies/prompts/listwise-rankgpt/: en_system.txt  en_user.txt  ru_system.txt  ru_user.txt
project/llm_reranker/strategies/prompts/pairwise-prp/: en_system.txt  en_user.txt  ru_system.txt  ru_user.txt
project/llm_reranker/strategies/prompts/pointwise-graded/: en_system.txt  en_user.txt  ru_system.txt  ru_user.txt
tests/: test_llm_reranker.py  test_rusbeir_llm_reranker.py  test_rusbeir_reranker.py  test_simple_llm_reranker.py
