[project]
name = "nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "datasets>=4.6.1",
    "gensim>=4.4.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy<2",
    "optuna>=4.8.0",
    "pandas>=2.3.3",
    "pymorphy3>=2.0.6",
    "pymorphy3-dicts-ru>=2.4.417150.4580142",
    "scikit-learn>=1.8.0",
    "spacy==3.7.5",
    "torch>=2.11.0",
]
