[project]
name = "nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "beautifulsoup4>=4.14.3",
    "datasets>=4.6.1",
    "evaluate>=0.4.6",
    "gensim>=4.4.0",
    "ipykernel>=7.2.0",
    "ir-datasets>=0.5.11",
    "matplotlib>=3.10.8",
    "mteb>=2.0.0",
    "numpy<2",
    "optuna>=4.8.0",
    "pandas>=2.3.3",
    "pyserini>=1.4.0,<1.6.0",
    "pymorphy3>=2.0.6",
    "pymorphy3-dicts-ru>=2.4.417150.4580142",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
    "spacy==3.7.5",
    "torch>=2.11.0",
    "transformers>=4.57.1",
]

[project.scripts]
miracl-rerank = "miracl_rerank.cli:main"
